Finished Use-Cases v0.3

--- a/2ο Παραδοτέο/Use-Cases/v0.3/Files/Use-cases-v0.3.tex
+++ b/2ο Παραδοτέο/Use-Cases/v0.3/Files/Use-cases-v0.3.tex
@@ -68,7 +68,7 @@
     \item Το σύστημα δείχνει τη λίστα με τα διαθέσιμα βιβλία στον χρήστη, περιέχοντας τους πλήρεις τίτλους, το όνομα συγγραφέα, τον εκδοτικό οίκο και έτος τύπωσης.
     \item Ο χρήστης επιλέγει ένα από τα βιβλία.
     \item Το σύστημα φορτώνει τη λίστα των ιδιοκτητών που προσφέρουν το βιβλίο που επιλέχθηκε και την προβάλλει στον χρήστη, μαζί με την τιμή του βιβλίου ανά μέρα, την πόλη που μένει ο κάθε χρήστης, το σκορ του (που προκύπτει από τα ratings άλλων χρηστών) και κουμπί που του επιτρέπει να δηλώσει προσφορά ενοικίασης του βιβλίου στον χρήστη αυτόν.
-    \item Ο χρήστης επιλέγοντας να κάνει ενοικίαση από έναν από τους ιδιοκτήτες, μεταφέρεται στο use case "Αποδοχή Προσφοράς Βιβλίου και Ενοικίασης".
+    \item Ο χρήστης επιλέγοντας να κάνει ενοικίαση από έναν από τους ιδιοκτήτες, μεταφέρεται στο use case "Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση".
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 1: Αναζήτηση χρήστη - Αυτός υπάρχει:}
@@ -93,7 +93,7 @@
     \item[\ref{Επιλογή τύπου αναζήτησης}.γ.3.] Το σύστημα δείχνει τη λίστα με τα βιβλία για τα οποία υπάρχουν αιτήσεις που πληρούν τα κριτήρια αναζήτησης στον χρήστη, περιέχοντας τους πλήρεις τίτλους, το όνομα συγγραφέα, τον εκδοτικό οίκο και έτος τύπωσης.
     \item[\ref{Επιλογή τύπου αναζήτησης}.γ.4.] Ο χρήστης επιλέγει ένα από τα βιβλία.
     \item[\ref{Επιλογή τύπου αναζήτησης}.γ.5.] Το σύστημα φορτώνει τη λίστα των χρηστών που έχουν κάνει αίτηση για το βιβλίο που επιλέχθηκε και την προβάλλει στον χρήστη, μαζί με την τιμή που προτίθενται να πληρώσει ο κάθε χρήστης για το βιβλίο ανά μέρα, την πόλη που μένει ο καθένας, το σκορ τους και κουμπί που του επιτρέπει να κάνει προσφορά εκπλήρωσης της αίτησης.
-    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.6.] Ο χρήστης επιλέγοντας να αποδεχτεί μια αίτηση, μεταφέρεται στο use case "Αποδοχή Αίτησης Βιβλίου και Ενοικίασης".
+    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.6.] Ο χρήστης επιλέγοντας να αποδεχτεί μια αίτηση, μεταφέρεται στο use case "Αποδοχή Αίτησης Βιβλίου και Ενοικίαση".
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 4: Αναζήτηση αίτησης - Αυτή δεν υπάρχει:}
@@ -109,9 +109,9 @@
     \item[\ref{Ύπαρξη βιβλίου}.2.] Το σύστημα ενημερώνει τον χρήστη ότι δεν υπάρχουν διαθέσιμα βιβλία που να πληρούν τα κριτήρια αναζήτησης. 
 \end{enumerate}
 
-\subsection{Αποδοχή Προσφοράς Βιβλίου και Ενοικίασης}
+\subsection{Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση}
 \label{Rental Use Case}
-\subsubsection*{Βασική Ροή <<Αποδοχή Προσφοράς Βιβλίου και Ενοικίασης>>:}
+\subsubsection*{Βασική Ροή <<Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση>>:}
 \begin{enumerate}
     \item Ο ενοικιαστής κάνει προσφορά ενοικίασης στον ιδιοκτήτη που επέλεξε για το βιβλίο που αναζήτησε.
         \label{Επιλογή τρόπου συναλλαγής}
@@ -164,15 +164,15 @@
 Παρόλα αυτά τα use case της υποστήριξης των πελατών και της επίλυσης διαφωνιών χρηστών από τη μεριά της υποστήριξης πελατών έχουμε επιλέξει να μην τα αναλύσουμε για την συγκεκριμένη άσκηση.
 
 
-\subsection{Αποδοχή Αίτησης Βιβλίου και Ενοικίασης}
+\subsection{Αποδοχή Αίτησης Βιβλίου και Ενοικίαση}
 
-\textbf{Σημείωση:} Αυτό το Use Case είναι κατά μεγάλο μέρος ίδιο με το "Αποδοχή Προσφοράς Βιβλίου και Ενοικίασης". Η κύρια διαφορά είναι ότι σε αυτό το use case, ο ιδιοκτήτης κάνει την "προσφορά εκπλήρωσης αίτησης" και ο ενοικιαστής την αποδέχεται, ενώ στο use case "Αποδοχή Προσφοράς Βιβλίου και Ενοικίασης" ο ενοικιαστής δημιουργεί "προσφορά ενοικίασης" και ο ιδιοκτήτης την αποδέχεται.
+\textbf{Σημείωση:} Αυτό το Use Case είναι κατά μεγάλο μέρος ίδιο με το "Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση". Η κύρια διαφορά είναι ότι σε αυτό το use case, ο ιδιοκτήτης κάνει την "προσφορά εκπλήρωσης αίτησης" και ο ενοικιαστής την αποδέχεται, ενώ στο use case "Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση" ο ενοικιαστής δημιουργεί "προσφορά ενοικίασης" και ο ιδιοκτήτης την αποδέχεται.
 
 Σημειώνουμε εδώ ότι η "προσφορά εκπλήρωσης αίτησης" υπάρχει ώστε ο ενοικιαστής να μπορεί να δει το "σκορ" του άλλου χρήστη και να αποφασίσει αν θέλει να κάνει συναλλαγή μαζί του ή όχι.
 
-Ο λόγος που παρουσιάζουμε το use case αυτό ξεχωριστό είναι επειδή δεν είχε αρκετά μεγάλη νοηματική συσχέτιση για να θεωρηθεί εναλλακτική ροή του "Αποδοχή Προσφοράς Βιβλίου και Ενοικίασης", αλλά ταυτόχρονα θέλαμε να το παρουσιάσουμε και να το υλοποιήσουμε για λόγους πληρότητας.
+Ο λόγος που παρουσιάζουμε το use case αυτό ξεχωριστό είναι επειδή δεν είχε αρκετά μεγάλη νοηματική συσχέτιση για να θεωρηθεί εναλλακτική ροή του "Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση", αλλά ταυτόχρονα θέλαμε να το παρουσιάσουμε και να το υλοποιήσουμε για λόγους πληρότητας.
 
-\subsubsection*{Βασική Ροή <<Αποδοχή Αίτησης Βιβλίου και Ενοικίασης>>:}
+\subsubsection*{Βασική Ροή <<Αποδοχή Αίτησης Βιβλίου και Ενοικίαση>>:}
 \begin{enumerate}
     \item Ο ιδιοκτήτης κάνει προσφορά εκπλήρωσης αίτησης στον ενοικιαστή που επέλεξε για το βιβλίο που αναζήτησε.
     \item Το σύστημα δημιουργεί μια συναλλαγή σε κατάσταση αναμονής αποδοχής.
@@ -521,5 +521,30 @@
    	\item \textbf{Νικόλαος Αυγέρης:} Author (Κεφαλαίων 2.7, 2.8, 2.9)
 	\item \textbf{Περικλής Κοροντζής:} Author (Κεφαλαίων 2.4, 2.10)
 \end{enumerate}
+\section{Αλλαγές από έκδοση σε έκδοση}
+
+\subsection{Από έκδοση v0.1 σε έκδοση v0.2}
+\begin{itemize}
+    \item Διόρθωση του Use-Case Diagram
+    \item Αλλαγή στο Use Case "Αναζήτηση βιβλίων / χρήστη / αιτήσεων"
+    \item Αλλαγή στο Use Case "Ενοικίαση βιβλίου από άλλο χρήστη"
+    \item Προσθήκη του Use Case "Ενοικίαση βιβλίου σε άλλο χρήστη (μεριά ιδιοκτήτη)"
+    \item Αλλαγή στο Use Case "Διαχείριση των βιβλίων που προσφέρει ο χρήστης προς ενοικίαση από άλλους"
+    \item Αλλαγή στο Use Case "Διαχείριση των αιτήσεων που κάνει ο χρήστης"
+    \item Διαγραφή του use case "Εκπλήρωση αιτήσεων που έχουν κάνει άλλοι χρήστες"
+    \item Αλλαγή στο Use Case "Αξιολόγηση άλλων χρηστών μετά από την ολοκλήρωση συναλλαγής"
+    \item Αλλαγή στο Use Case "Προβολή και επεξεργασία στοιχείων λογαριασμού χρήστη"
+    \item Αλλαγή στο Use Case "Επεξεργασία χρηματικού υπολοίπου χρήστη"
+    \item Αλλαγή στο Use Case "Προβολή ιστορικού συναλλαγών και στατιστικών"
+\end{itemize}
+Άρα από την προηγούμενη έκδοση έχουν αλλάξει όλα τα Use-Cases εκτός του "Επεξεργασία λίστας αγαπημένων και χρήση συστήματος ειδοποιήσεων".
+
+Σε ορισμένα από τα Use Cases οι αλλαγές είναι μεγάλες, σε άλλες η ουσία παραμένει ίδια με καλύτερο όμως διαχωρισμό των βημάτων και με μικρές διορθώσεις σε ορισμένα βήματα.
+
+\subsection{Από έκδοση v0.2 σε έκδοση v0.3}
+\begin{itemize}
+    \item Αλλαγή στο Use Case "Αναζήτηση βιβλίων / χρήστη / αιτήσεων"
+    \item Διαγραφή των Use Cases "Αναζήτηση βιβλίων / χρήστη / αιτήσεων" και "Ενοικίαση βιβλίου από άλλο χρήστη" και αντικατάστασή τους με τα "Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση" και "Αποδοχή Αίτησης Βιβλίου και Ενοικίαση
+\end{itemize}
 
 \end{document}
