Corrected Robustness Diagrams for next submission

--- a/2ο Παραδοτέο/Use-Cases/v0.3/Files/Use-cases-v0.3.tex
+++ b/2ο Παραδοτέο/Use-Cases/v0.3/Files/Use-cases-v0.3.tex
@@ -544,7 +544,7 @@
 \subsection{Από έκδοση v0.2 σε έκδοση v0.3}
 \begin{itemize}
     \item Αλλαγή στο Use Case "Αναζήτηση βιβλίων / χρήστη / αιτήσεων"
-    \item Διαγραφή των Use Cases "Αναζήτηση βιβλίων / χρήστη / αιτήσεων" και "Ενοικίαση βιβλίου από άλλο χρήστη" και αντικατάστασή τους με τα "Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση" και "Αποδοχή Αίτησης Βιβλίου και Ενοικίαση
+    \item Διαγραφή των Use Cases "Αναζήτηση βιβλίων / χρήστη / αιτήσεων" και "Ενοικίαση βιβλίου από άλλο χρήστη" και αντικατάστασή τους με τα "Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση" και "Αποδοχή Αίτησης Βιβλίου και Ενοικίαση".
 \end{itemize}
 
 \end{document}
