Added initial sequence diagrams report and finished domain-model-v0.3

--- a/2ο Παραδοτέο/Domain-Model/v0.3/Files/Domain-model-v0.3.tex
+++ b/2ο Παραδοτέο/Domain-Model/v0.3/Files/Domain-model-v0.3.tex
@@ -106,6 +106,7 @@
 
 \subsection{Από έκδοση v0.2 σε έκδοση v0.3}
 \begin{itemize}
+    \item Προσθήκη επιπλέον συσχετίσεων μεταξύ κλάσεων.
     \item Προσθήκη στατικού μοντέλου attributes που προέκυψαν από τα Robustness Diagrams.
     \item Προσθήκη μεθόδων στις κλάσεις από το Sequence Diagram.
     \item Προσθήκη multiplicities of associations.
