Added "Manage User Book Listings" sequence and corrected robustness

--- a/3ο Παραδοτέο/Robustness-Diagrams/v0.2/Files/Robustness-diagrams-v0.2.tex
+++ b/3ο Παραδοτέο/Robustness-Diagrams/v0.2/Files/Robustness-diagrams-v0.2.tex
@@ -125,9 +125,11 @@
 \begin{itemize}
     \item Αλλαγή στο Robustness Diagram για "Αναζήτηση βιβλίων / χρήστη / αιτήσεων".
     \item Διαγραφή των Robustness Diagrams για "Αναζήτηση βιβλίων / χρήστη / αιτήσεων" και "Ενοικίαση βιβλίου από άλλο χρήστη" και αντικατάστασή τους με τα αντίστοιχα για "Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση" και "Αποδοχή Αίτησης Βιβλίου και Ενοικίαση".
-    \item Ανανέωση του Robustness Diagram για "Επεξεργασία χρηματικού υπολοίπου χρήστη"
-    \item Ανανέωση του Robustness Diagram για "Επεξεργασία λίστας αγαπημένων και χρήση συστήματος ειδοποιήσεων"
-    \item Ανανέωση του Robustness Diagram για "Προβολή και Επεξεργασία στοιχείων λογαριασμού χρήστη"
+    \item Ανανέωση του Robustness Diagram για "Επεξεργασία χρηματικού υπολοίπου χρήστη".
+    \item Ανανέωση του Robustness Diagram για "Επεξεργασία λίστας αγαπημένων και χρήση συστήματος ειδοποιήσεων".
+    \item Ανανέωση του Robustness Diagram για "Προβολή και Επεξεργασία στοιχείων λογαριασμού χρήστη".
+    \item Ανανέωση του Robustness Diagram για "Διαχείριση των βιβλίων που προσφέρει ο χρήστης
+προς ενοικίαση από άλλους".
 \end{itemize}
 
 \end{document}
