--- a/Reports/Class-Diagram/v0.1/Files/Class-Diagram-v0.1.tex
+++ b/Reports/Class-Diagram/v0.1/Files/Class-Diagram-v0.1.tex
@@ -68,7 +68,7 @@
 Τα βιβλία που έχουν εισαχθεί στο σύστημα κατά την δημιουργία κάποιας καταχώρησης (είτε είναι διαθέσιμα για ενοικίαση είτε όχι).
 %Περιέχονται βασικές πληροφορίες των βιβλίων όπως τίτλος, συγγραφέας, είδος (πχ φαντασίας), κατηγορία (πχ νουβέλα).
 
-\subsection{Listing}
+\subsection{Transaction}
 Από τη στιγμή που κάποιος χρήστης κάνει αίτηση ενοικίασης ενός βιβλίου ή αίτηση εκπλήρωσης αίτησης δημιουργείται μια συναλλαγή. Αυτή έχει σκοπό να καταγράφει την κατάσταση της συναλλαγής, όπως αν είναι ενεργή, ακυρωμένη ή ολοκληρωμένη. Συνδέεται με σχέση συνάθροισης με την κλάση "Χρήστης".
 %Περιέχει δεδομένα όπως τον ιδιοκτήτη του βιβλίου (τύπου user), τον ενοικιαστή (τύπου user) το βιβλίο (τύπου Listing) την κατάσταση (σε τι κατάσταση βρίσκεται η διαδικασία, π.χ. "Ολοκληρωμένη", "Αναμένεται αποστολή" κ.α) και Tracking Number στη περίπτωση που γίνεται ταχυδρομική συναλλαγή.
 
