Renewed all my use cases, small corrections to rent robustness diagrams and small correction to search code

--- a/Reports/Use-Cases/v1.0/Files/Use-cases-v1.0.tex
+++ b/Reports/Use-Cases/v1.0/Files/Use-cases-v1.0.tex
@@ -61,98 +61,103 @@
 \begin{enumerate}
     \item Ο χρήστης επιλέγει να μεταβεί στη σελίδα αναζήτησης.
     \item Το σύστημα εμφανίζει στον χρήστη τη σελίδα αναζήτησης.
-    \item Ο χρήστης επιλέγει φίλτρο αναζήτησης "βιβλία", με τον τύπο συναλλαγής που επιθυμεί (δια ζώσης ή ταχυδρομικώς) και εισάγει ένα κείμενο αναζήτησης (μπορεί να είναι και τίτλος βιβλίου και όνομα συγγραφέα).
+    \item Ο χρήστης επιλέγει φίλτρο αναζήτησης "βιβλία" και εισάγει ένα κείμενο αναζήτησης (μπορεί να είναι και τίτλος βιβλίου και όνομα συγγραφέα).
         \label{Επιλογή τύπου αναζήτησης}
-    \item Το σύστημα ελέγχει αν υπάρχουν διαθέσιμα βιβλία προς ενοικίαση που πληρούν το κείμενο αναζήτησης και το τύπο συναλλαγής.
+    \item Το σύστημα ελέγχει αν υπάρχουν διαθέσιμα βιβλία προς ενοικίαση που πληρούν το κείμενο αναζήτησης.
         \label{Ύπαρξη βιβλίου}
-    \item Το σύστημα δείχνει τη λίστα με τα διαθέσιμα βιβλία στον χρήστη, περιέχοντας τους πλήρεις τίτλους, το όνομα συγγραφέα, τον εκδοτικό οίκο και έτος τύπωσης.
+    \item Το σύστημα δείχνει τη λίστα με τα διαθέσιμα βιβλία στον χρήστη, περιέχοντας τους πλήρεις τίτλους, το όνομα συγγραφέα, τη κατηγορία που ανήκει, την έκδοση και τον εκδοτικό οίκο.
     \item Ο χρήστης επιλέγει ένα από τα βιβλία.
-    \item Το σύστημα φορτώνει τη λίστα των ιδιοκτητών που προσφέρουν το βιβλίο που επιλέχθηκε και την προβάλλει στον χρήστη, μαζί με την τιμή του βιβλίου ανά μέρα, την πόλη που μένει ο κάθε χρήστης, το σκορ του (που προκύπτει από τα ratings άλλων χρηστών) και κουμπί που του επιτρέπει να δηλώσει προσφορά ενοικίασης του βιβλίου στον χρήστη αυτόν.
-    \item Ο χρήστης επιλέγοντας να κάνει ενοικίαση από έναν από τους ιδιοκτήτες, μεταφέρεται στο use case "Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση".
+    \item Το σύστημα φορτώνει τη λίστα των ιδιοκτητών που προσφέρουν το βιβλίο που επιλέχθηκε και την προβάλλει στο χρήστη, εμφανίζοντας το όνομα των χρηστών που προσφέρουν το βιβλίο, το email τους, τη πόλη που μένουν, το score τους, το τύπο συναλλαγής που προσφέρουν (συνάντηση δια ζώσης ή ταχυδρομική συναλλαγή) και τη τιμή του βιβλίου ανά μέρα. 
+    \item Το σύστημα δίνει τη δυνατότητα στο χρήστη να επιλέξει έναν ιδιοκτήτη από τη λίστα για να γίνει συναλλαγή μαζί του. Η χρήση αυτής της λειτουργίας αυτής αναλύεται στο use case "Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση".
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 1: Αναζήτηση χρήστη - Αυτός υπάρχει:}
 \begin{enumerate}
     \item[\ref{Επιλογή τύπου αναζήτησης}.α.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "χρήστης" και εισάγει ένα κείμενο αναζήτησης (το username του χρήστη που αναζητεί).
     \item[\ref{Επιλογή τύπου αναζήτησης}.α.2.] Το σύστημα ελέγχει αν υπάρχει άλλος χρήστης με το όνομα που ζήτησε ο χρήστης και βλέπει ότι υπάρχει.
-    \item[\ref{Επιλογή τύπου αναζήτησης}.α.3.] Το σύστημα προβάλλει στον χρήστη το προφίλ του χρήστη που αναζήτησε, δηλαδή το username, το rating του, την τοποθεσία που μένει και το description που έχει ορίσει για τον λογαριασμό του. Επίσης προβάλλει ένα κουμπί προσθήκης χρήστη στη λίστα των αγαπημένων (το οποίο χρησιμοποιείται για το use case των notifications και αγαπημένων).
-    \item[\ref{Επιλογή τύπου αναζήτησης}.α.4.] Ο χρήστης επιλέγοντας να προσθέσει τον άλλον χρήστη στη λίστα των αγαπημένων του, μεταφέρεται στο use case "Επεξεργασία λίστας αγαπημένων και χρήση συστήματος ειδοποιήσεων".
+    \item[\ref{Επιλογή τύπου αναζήτησης}.α.3.] Το σύστημα φορτώνει τις αξιολογήσεις που έχουν γίνει για τον χρήστη που αναζητήθηκε από άλλους χρήστες, αν αυτές υπάρχουν.
+    \item[\ref{Επιλογή τύπου αναζήτησης}.α.4.] Το σύστημα προβάλλει στον χρήστη το προφίλ του χρήστη που αναζήτησε, δηλαδή το username του, το email του, την ηλικία του, τη πόλη που μένει, το τηλέφωνό του, τη περιγραφή που όρισε για το προφίλ του, το rating του και τις αξιολογήσεις του.
+    \item[\ref{Επιλογή τύπου αναζήτησης}.α.5.] Το σύστημα επίσης δίνει στο χρήστη τη δυνατότητα να προσθέσει τον χρήστη που αναζήτησε στη λίστα των αγαπημένων (η δυνατότητα αυτή χρησιμοποιείται στο use case "Επεξεργασία λίστας αγαπημένων και χρήση συστήματος ειδοποιήσεων").
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 2: Αναζήτηση χρήστη - Αυτός δεν υπάρχει:}
 \begin{enumerate}
     \item[\ref{Επιλογή τύπου αναζήτησης}.β.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "χρήστης" και εισάγει ένα κείμενο αναζήτησης (το username του χρήστη που αναζητεί).
     \item[\ref{Επιλογή τύπου αναζήτησης}.β.2.] Το σύστημα ελέγχει αν υπάρχει άλλος χρήστης με το όνομα που ζήτησε ο χρήστης και βλέπει ότι δεν υπάρχει.
-    \item[\ref{Επιλογή τύπου αναζήτησης}.β.3.] Το σύστημα ενημερώνει τον χρήστη ότι ο χρήστης που αναζητεί δεν υπάρχει.
+    \item[\ref{Επιλογή τύπου αναζήτησης}.β.3.] Το σύστημα εμφανίζει στο χρήστη κενή σελίδα αναζήτησης.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 3: Αναζήτηση αίτησης - Αυτή υπάρχει:}
 \begin{enumerate}
-    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "αιτήσεις", τον τύπο συναλλαγής που θέλει (δια ζώσης ή ταχυδρομικώς), και εισάγει ένα κείμενο αναζήτησης (το όνομα του βιβλίου για το οποίο αναζητά αν υπάρχουν αιτήσεις).
+    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "αιτήσεις" και εισάγει ένα κείμενο αναζήτησης (το όνομα του βιβλίου για το οποίο αναζητά αν υπάρχουν αιτήσεις ή το όνομα κάποιου συγγραφέα).
     \item[\ref{Επιλογή τύπου αναζήτησης}.γ.2.] Το σύστημα ελέγχει αν υπάρχει αίτηση που να πληρεί τα κριτήρια αναζήτησης που ζήτησε ο χρήστης και διαπιστώνει ότι υπάρχει.
-    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.3.] Το σύστημα δείχνει τη λίστα με τα βιβλία για τα οποία υπάρχουν αιτήσεις που πληρούν τα κριτήρια αναζήτησης στον χρήστη, περιέχοντας τους πλήρεις τίτλους, το όνομα συγγραφέα, τον εκδοτικό οίκο και έτος τύπωσης.
+    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.3.] Το σύστημα δείχνει τη λίστα με τα βιβλία για τα οποία υπάρχουν αιτήσεις που πληρούν τα κριτήρια αναζήτησης στον χρήστη, περιέχοντας τους πλήρεις τίτλους, το όνομα συγγραφέα, τη κατηγορία που ανήκει, την έκδοση και τον εκδοτικό οίκο.
     \item[\ref{Επιλογή τύπου αναζήτησης}.γ.4.] Ο χρήστης επιλέγει ένα από τα βιβλία.
-    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.5.] Το σύστημα φορτώνει τη λίστα των χρηστών που έχουν κάνει αίτηση για το βιβλίο που επιλέχθηκε και την προβάλλει στον χρήστη, μαζί με την τιμή που προτίθενται να πληρώσει ο κάθε χρήστης για το βιβλίο ανά μέρα, την πόλη που μένει ο καθένας, το σκορ τους και κουμπί που του επιτρέπει να κάνει προσφορά εκπλήρωσης της αίτησης.
-    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.6.] Ο χρήστης επιλέγοντας να αποδεχτεί μια αίτηση, μεταφέρεται στο use case "Αποδοχή Αίτησης Βιβλίου και Ενοικίαση".
+    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.5.] Το σύστημα φορτώνει τη λίστα των χρηστών που έχουν κάνει αίτηση για το βιβλίο που επιλέχθηκε και την προβάλλει στον χρήστη, εμφανίζοντας το username των χρηστών που προσφέρουν το βιβλίο, το email τους, τη πόλη που μένουν, το score τους, το τύπο συναλλαγής που προσφέρουν (συνάντηση δια ζώσης ή ταχυδρομική συναλλαγή) και τη τιμή του βιβλίου ανά μέρα που προτίθενται να πληρώσουν.
+    \item[\ref{Επιλογή τύπου αναζήτησης}.γ.6.] Το σύστημα δίνει τη δυνατότητα στο χρήστη να επιλέξει έναν χρήστη από τη λίστα για να εκπληρώσει την αίτησή του και να γίνει συναλλαγή μαζί του. Η χρήση αυτής της λειτουργίας αυτής αναλύεται στο use case "Αποδοχή Αίτησης Βιβλίου και Ενοικίαση".
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 4: Αναζήτηση αίτησης - Αυτή δεν υπάρχει:}
 \begin{enumerate}
-    \item[\ref{Επιλογή τύπου αναζήτησης}.δ.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "αιτήσεις", με τύπο συναλλαγής "δια ζώσης", και εισάγει ένα κείμενο αναζήτησης (το όνομα του βιβλίου για το οποίο αναζητά αν υπάρχουν αιτήσεις).
+    \item[\ref{Επιλογή τύπου αναζήτησης}.δ.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "αιτήσεις", και εισάγει ένα κείμενο αναζήτησης (το όνομα του βιβλίου για το οποίο αναζητά αν υπάρχουν αιτήσεις ή το όνομα ενός συγγραφέα).
     \item[\ref{Επιλογή τύπου αναζήτησης}.δ.2.] Το σύστημα ελέγχει αν υπάρχει αίτηση για το βιβλίο που αναζήτησε ο χρήστης και διαπιστώνει ότι δεν υπάρχει.
-    \item[\ref{Επιλογή τύπου αναζήτησης}.δ.3.] Το σύστημα ενημερώνει τον χρήστη ότι δεν υπάρχει αίτηση που να πληρεί τα κριτήρια αναζήτησης.
+    \item[\ref{Επιλογή τύπου αναζήτησης}.δ.3.] Το σύστημα εμφανίζει στο χρήστη κενή σελίδα αναζήτησης.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 5: Αναζήτηση βιβλίου - Αυτό δεν υπάρχει:}
 \begin{enumerate}
     \item[\ref{Ύπαρξη βιβλίου}.1.] Το σύστημα ελέγχει αν υπάρχουν διαθέσιμα βιβλία προς ενοικίαση που να πληρούν το κείμενο αναζήτησης και βλέπει ότι δεν υπάρχουν.
-    \item[\ref{Ύπαρξη βιβλίου}.2.] Το σύστημα ενημερώνει τον χρήστη ότι δεν υπάρχουν διαθέσιμα βιβλία που να πληρούν τα κριτήρια αναζήτησης. 
+    \item[\ref{Ύπαρξη βιβλίου}.2.] Το σύστημα εμφανίζει στο χρήστη κενή σελίδα αναζήτησης.
 \end{enumerate}
 
 \subsection{Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση}
 \label{Rental Use Case}
 \subsubsection*{Βασική Ροή <<Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση>>:}
 \begin{enumerate}
-    \item Ο ενοικιαστής κάνει προσφορά ενοικίασης στον ιδιοκτήτη που επέλεξε για το βιβλίο που αναζήτησε.
+    \item Ο ενοικιαστής κάνει προσφορά ενοικίασης στον ιδιοκτήτη που επέλεξε για το βιβλίο που αναζήτησε (στο use case της αναζήτησης).
         \label{Επιλογή τρόπου συναλλαγής}
     \item Το σύστημα επιβεβαιώνει ότι ο ενοικιαστής έχει αρκετά χρήματα στο λογαριασμό του για να καλύψει το "ποσό ασφαλείας" που θα δεσμευτεί αργότερα από τον λογαριασμό του.
         \label{Έλεγχος ποσού ασφαλείας}
     \item Το σύστημα δημιουργεί μια συναλλαγή σε κατάσταση αναμονής αποδοχής.
-    \item Ο ιδιοκτήτης αποδέχεται την προσφορά ενοικίασης.
+    \item Ο ιδιοκτήτης επιλέγει να προβάλλει τη σελίδα του Dashboard (όπου οι χρήστες βλέπουν τις τρέχουσες συναλλαγές τους).
+    \item Το σύστημα μεταβιβάζει τον ιδιοκτήτη στη σελίδα του Dashboard.
+    \item Ο ιδιοκτήτης αποδέχεται από τη σελίδα του Dashboard την προσφορά ενοικίασης.
     \item Το σύστημα επιβεβαιώνει ότι η προσφορά ενοικίασης έχει γίνει αποδεκτή από τον ιδιοκτήτη και αλλάζει την κατάσταση της συναλλαγής σε αποδεκτή.
         \label{Αποδοχή ή απόρριψη συναλλαγής}
+    \item Το σύστημα δεσμεύει το ποσό ασφαλείας από το λογαριασμό του ενοικιαστή.
+    \item Ο ενοικιαστής επιλέγει να προβάλλει τη σελίδα του Dashboard.
+    \item Το σύστημα μεταβιβάζει τον ενοικιαστή στη σελίδα του Dashboard.
     \item Ο ενοικιαστής, αφού βρεθεί με τον ιδιοκτήτη δια ζώσης και παραλάβει το βιβλίο ή το βιβλίο φτάσει σε αυτόν μέσω ταχυδρομείου, ενημερώνει το σύστημα ότι έχει κατοχή του βιβλίου. 
     \item Ο ιδιοκτήτης επίσης ενημερώνει το σύστημα όταν έχει δώσει το βιβλίο ή όταν έχει φτάσει ταχυδρομικώς.
     \item Το σύστημα ελέγχει αν έλαβε ενημέρωση κατοχής του βιβλίου και από τον ενοικιαστή και από τον ιδιοκτήτη.
         \label {Δεν ενημερώνεται η κατοχή}
-    \item Το σύστημα δεσμεύει "ποσό ασφαλείας" από τον λογαριασμό του ενοικιαστή, και αρχίζει να τον χρεώνει αυτόματα μέρα με τη μέρα.
-        \label{Τέλος dispute resolved - Τέλος χρημάτων}
-    \item Ο ενοικιαστής, αφού τελειώσει το βιβλίο, βρίσκεται πάλι με τον ιδιοκτήτη και του παραχωρεί το βιβλίο ή αποστέλλει πίσω το βιβλίο ταχυδρομικώς, και όταν αυτό βρίσκεται πλέον πίσω στην κατοχή του ιδιοκτήτη το σύστημα για την επιστροφή του βιβλίου.
+    \item Το σύστημα αρχίζει τη ημερήσια ανανέωση της συνολικής χρέωσης (προσθέτει το ημερήσιο χρέος κάθε μέρα στο συνολικό) και ελέγχει ημερησίως πάλι αν τα χρήματα του ενοικιαστή αρκούν για να καλύψουν τη χρέωση, και βλέπει ότι αυτό ισχύει κάθε φορά.
+        \label{Τέλος χρημάτων}
+    \item Ο ενοικιαστής, αφού τελειώσει το βιβλίο, βρίσκεται πάλι με τον ιδιοκτήτη και του δίνει το βιβλίο ή αποστέλλει πίσω το βιβλίο ταχυδρομικώς, και όταν αυτό βρίσκεται πλέον πίσω στην κατοχή του ιδιοκτήτη το σύστημα για την επιστροφή του βιβλίου.
     \item Ο ιδιοκτήτης επίσης ενημερώνει το σύστημα για την επιστροφή του βιβλίου όταν το παραλάβει.
         \label{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}
     \item Το σύστημα ελέγχει ότι έχει λάβει ενημέρωση επιστροφής βιβλίου και από τα δύο μέλη. 
-    \item Το σύστημα σταματάει να χρεώνει τον ενοικιαστή και του επιστρέφει το "ποσό ασφαλείας". Επίσης μετατρέπει την κατάσταση της συναλλαγής σε ολοκληρωμένη.
+    \item Το σύστημα σταματάει την ημερήσια ανανέωση του συνολικού χρέους και τον ημερήσιο έλεγχο, μεταφέρει στον ιδιοκτήτη το συνολικό ποσό του χρέους που προέκυψε και επιστρέφει το "ποσό ασφαλείας" στον ενοικιαστή. Επίσης μετατρέπει την κατάσταση της συναλλαγής σε ολοκληρωμένη.
         \label{Τέλος ενοικίασης}
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 1: Ο ενοικιαστής δεν έχει αρκετό υπόλοιπο για να καλύψει το "ποσό ασφαλείας":}
 \begin{enumerate}
     \item[\ref{Έλεγχος ποσού ασφαλείας}.1.] Το σύστημα παρατηρεί ότι ο ενοικιαστής δεν έχει αρκετό χρηματικό ποσό στο λογαριασμό για να καλύψει το "ποσό ασφαλείας".
-    \item[\ref{Έλεγχος ποσού ασφαλείας}.2.] Ο ενοικιαστής ενημερώνεται από το σύστημα ότι δεν έχει αρκετά χρήματα στον λογαριασμό του και να προσθέσει αν θέλει να κάνει την προσφορά ενοικίασης.
+    \item[\ref{Έλεγχος ποσού ασφαλείας}.2.] Ο ενοικιαστής ενημερώνεται από το σύστημα ότι δεν έχει αρκετά χρήματα στον λογαριασμό του για να ξεκινήσει νέα συναλλαγή.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 2: Η συναλλαγή απορρίπτεται από τον ιδιοκτήτη:}
 \begin{enumerate}
-    \item[\ref{Αποδοχή ή απόρριψη συναλλαγής}.1.] Το σύστημα παρατηρεί ότι η προσφορά ενοικίασης απορρίπτεται από τον ιδιοκτήτη.
-    \item[\ref{Αποδοχή ή απόρριψη συναλλαγής}.2.] Ο ενοικιαστής ενημερώνεται από το σύστημα ότι η αίτησή του απορρίφθηκε από τον ιδιοκτήτη.
-    \item[\ref{Αποδοχή ή απόρριψη συναλλαγής}.3.] Η συναλλαγή ολοκληρώνεται και αποθηκεύεται (ως ακυρωμένη) στο ιστορικό συναλλαγών των δύο χρηστών από το σύστημα.
+    \item[\ref{Αποδοχή ή απόρριψη συναλλαγής}.1.] Το σύστημα παρατηρεί ότι η προσφορά ενοικίασης απορρίπτεται από τον ιδιοκτήτη, και αλλάζει τη κατάσταση της συναλλαγής που δημιουργήθηκε σε "Απορρίφθηκε".
+    \item[\ref{Αποδοχή ή απόρριψη συναλλαγής}.2.] Η συναλλαγή ολοκληρώνεται και αποθηκεύεται (ως ακυρωμένη) στο ιστορικό συναλλαγών των δύο χρηστών από το σύστημα.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική Ροή 3: Τέλος χρημάτων ενοικιαστή}
 \begin{enumerate}
-    \item[\ref{Τέλος dispute resolved - Τέλος χρημάτων}.1.] Το σύστημα αντιλαμβάνεται ότι έχουν τελειώσει τα χρήματα του ενοικιαστή.
-    \item[\ref{Τέλος dispute resolved - Τέλος χρημάτων}.2.] Το σύστημα αποδεσμεύει το "ποσό ασφαλείας" και το στέλνει στον ιδιοκτήτη.
-    \item[\ref{Τέλος dispute resolved - Τέλος χρημάτων}.3.] Το σύστημα αλλάζει τη κατάσταση της συναλλαγής σε ολοκληρωμένη.
+    \item[\ref{Τέλος χρημάτων}.1.] Το σύστημα αρχίζει τη ημερήσια ανανέωση της συνολικής χρέωσης (προσθέτει το ημερήσιο χρέος κάθε μέρα στο συνολικό) και ελέγχει ημερησίως πάλι αν τα χρήματα του ενοικιαστή αρκούν για να καλύψουν τη χρέωση, και βλέπει ότι κάποτε δεν ισχύει.
+    \item[\ref{Τέλος χρημάτων}.2.] Το σύστημα στέλνει το "ποσό ασφαλείας" στον ιδιοκτήτη.
+    \item[\ref{Τέλος χρημάτων}.3.] Το σύστημα αλλάζει τη κατάσταση της συναλλαγής σε ολοκληρωμένη.
 \end{enumerate}
 
 \textbf{Σημείωση:} Σημειώνουμε εδώ ότι η "προσφορά ενοικίασης" υπάρχει ώστε ο ιδιοκτήτης να μπορεί να δει το "σκορ" του άλλου χρήστη και να αποφασίσει αν θέλει να κάνει συναλλαγή μαζί του ή όχι.
@@ -174,32 +179,43 @@
 
 \subsubsection*{Βασική Ροή <<Αποδοχή Αίτησης Βιβλίου και Ενοικίαση>>:}
 \begin{enumerate}
-    \item Ο ιδιοκτήτης κάνει προσφορά εκπλήρωσης αίτησης στον ενοικιαστή που επέλεξε για το βιβλίο που αναζήτησε.
+    \item Ο ιδιοκτήτης κάνει προσφορά εκπλήρωσης αίτησης στον ενοικιαστή που επέλεξε για το βιβλίο που αναζήτησε (στο use case της αναζήτησης).
+    \item Το σύστημα επιβεβαιώνει ότι ο ενοικιαστής έχει αρκετά χρήματα στο λογαριασμό του για να καλύψει το "ποσό ασφαλείας" που θα δεσμευτεί αργότερα από τον λογαριασμό του.
     \item Το σύστημα δημιουργεί μια συναλλαγή σε κατάσταση αναμονής αποδοχής.
-    \item Ο ενοικιαστής αποδέχεται την προσφορά εκπλήρωσης αίτησης.
-    \item Το σύστημα επιβεβαιώνει ότι η προσφορά εκπλήρωσης αίτησης έχει γίνει αποδεκτή από τον ενοικιαστή.
+    \item Ο ενοικιαστής επιλέγει να προβάλλει τη σελίδα του Dashboard (όπου οι χρήστες βλέπουν τις τρέχουσες συναλλαγές τους).
+    \item Το σύστημα μεταβιβάζει τον ενοικιαστή στη σελίδα του Dashboard.
+    \item Ο ενοικιαστής αποδέχεται από τη σελίδα του Dashboard την προσφορά εκπλήρωσης αίτησης.
+    \item Το σύστημα επιβεβαιώνει ότι η προσφορά εκπλήρωσης αίτησης έχει γίνει αποδεκτή από τον ενοικιαστή και αλλάζει την κατάσταση της συναλλαγής σε αποδεκτή.
+    \item Το σύστημα δεσμεύει το ποσό ασφαλείας από το λογαριασμό του ενοικιαστή.
+    \item Ο ιδιοκτήτης επιλέγει να προβάλλει τη σελίδα του Dashboard.
+    \item Το σύστημα μεταβιβάζει τον ιδιοκτήτη στη σελίδα του Dashboard.
     \item Ο ενοικιαστής, αφού βρεθεί με τον ιδιοκτήτη δια ζώσης και παραλάβει το βιβλίο ή το βιβλίο φτάσει σε αυτόν μέσω ταχυδρομείου, ενημερώνει το σύστημα ότι έχει κατοχή του βιβλίου. 
     \item Ο ιδιοκτήτης επίσης ενημερώνει το σύστημα όταν έχει δώσει το βιβλίο ή όταν έχει φτάσει ταχυδρομικώς.
     \item Το σύστημα ελέγχει αν έλαβε ενημέρωση κατοχής του βιβλίου και από τον ενοικιαστή και από τον ιδιοκτήτη.
-    \item Το σύστημα δεσμεύει "ποσό ασφαλείας" από τον λογαριασμό του ενοικιαστή, και αρχίζει να τον χρεώνει αυτόματα μέρα με τη μέρα.
-    \item Ο ενοικιαστής, αφού τελειώσει το βιβλίο, βρίσκεται πάλι με τον ιδιοκτήτη και του παραχωρεί το βιβλίο ή αποστέλλει πίσω το βιβλίο ταχυδρομικώς, και όταν αυτό βρίσκεται πλέον πίσω στην κατοχή του ιδιοκτήτη το σύστημα για την επιστροφή του βιβλίου.
+    \item Το σύστημα αρχίζει τη ημερήσια ανανέωση της συνολικής χρέωσης (προσθέτει το ημερήσιο χρέος κάθε μέρα στο συνολικό) και ελέγχει ημερησίως πάλι αν τα χρήματα του ενοικιαστή αρκούν για να καλύψουν τη χρέωση, και βλέπει ότι αυτό ισχύει κάθε φορά.
+    \item Ο ενοικιαστής, αφού τελειώσει το βιβλίο, βρίσκεται πάλι με τον ιδιοκτήτη και του δίνει το βιβλίο ή αποστέλλει πίσω το βιβλίο ταχυδρομικώς, και όταν αυτό βρίσκεται πλέον πίσω στην κατοχή του ιδιοκτήτη το σύστημα για την επιστροφή του βιβλίου.
     \item Ο ιδιοκτήτης επίσης ενημερώνει το σύστημα για την επιστροφή του βιβλίου όταν το παραλάβει.
     \item Το σύστημα ελέγχει ότι έχει λάβει ενημέρωση επιστροφής βιβλίου και από τα δύο μέλη. 
-    \item Το σύστημα σταματάει να χρεώνει τον ενοικιαστή και του επιστρέφει το "ποσό ασφαλείας". Επίσης μετατρέπει την κατάσταση της συναλλαγής σε ολοκληρωμένη.
+    \item Το σύστημα σταματάει την ημερήσια ανανέωση του συνολικού χρέους και τον ημερήσιο έλεγχο, μεταφέρει στον ιδιοκτήτη το συνολικό ποσό του χρέους που προέκυψε και επιστρέφει το "ποσό ασφαλείας" στον ενοικιαστή. Επίσης μετατρέπει την κατάσταση της συναλλαγής σε ολοκληρωμένη.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 1: Η συναλλαγή απορρίπτεται από τον ενοικιαστή}
+\subsubsection*{Εναλλακτική Ροή 1: Ο ενοικιαστής δεν έχει αρκετό υπόλοιπο για να καλύψει το "ποσό ασφαλείας":}
 \begin{enumerate}
-    \item[4.1.] Το σύστημα παρατηρεί ότι η προσφορά εκπλήρωσης αίτησης απορρίπτεται από τον ενοικιαστή.
-    \item[4.2.] Ο ιδιοκτήτης ενημερώνεται από το σύστημα ότι η προσφορά του απορρίφθηκε από τον ενοικιαστή.
-    \item[4.3.] Η συναλλαγή ολοκληρώνεται και αποθηκεύεται (ως ακυρωμένη) στο ιστορικό συναλλαγών των δύο χρηστών από το σύστημα.
+    \item[2.1.] Το σύστημα παρατηρεί ότι ο ενοικιαστής δεν έχει αρκετό χρηματικό ποσό στο λογαριασμό για να καλύψει το "ποσό ασφαλείας".
+    \item[2.2.] Ο ιδιοκτήτης ενημερώνεται από το σύστημα ότι ο ενοικιαστής δεν έχει αρκετά χρήματα στον λογαριασμό του για να ξεκινήσει νέα συναλλαγή.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 2: Τέλος χρημάτων ενοικιαστή}
+\subsubsection*{Εναλλακτική Ροή 2: Η συναλλαγή απορρίπτεται από τον ενοικιαστή}
 \begin{enumerate}
-    \item[8.1.] Το σύστημα αντιλαμβάνεται ότι έχουν τελειώσει τα χρήματα του ενοικιαστή.
-    \item[8.2.] Το σύστημα αποδεσμεύει το "ποσό ασφαλείας" και το στέλνει στον ιδιοκτήτη.
-    \item[8.3.] Το σύστημα αλλάζει τη κατάσταση της συναλλαγής σε ολοκληρωμένη.
+    \item[7.1.] Το σύστημα παρατηρεί ότι η προσφορά εκπλήρωσης αίτησης απορρίπτεται από τον ενοικιαστή, και αλλάζει τη κατάσταση της συναλλαγής που δημιουργήθηκε σε "Απορρίφθηκε".
+    \item[7.2.] Η συναλλαγή ολοκληρώνεται και αποθηκεύεται (ως ακυρωμένη) στο ιστορικό συναλλαγών των δύο χρηστών από το σύστημα.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική Ροή 3: Τέλος χρημάτων ενοικιαστή}
+\begin{enumerate}
+    \item[11.1.] Το σύστημα αρχίζει τη ημερήσια ανανέωση της συνολικής χρέωσης (προσθέτει το ημερήσιο χρέος κάθε μέρα στο συνολικό) και ελέγχει ημερησίως πάλι αν τα χρήματα του ενοικιαστή αρκούν για να καλύψουν τη χρέωση, και βλέπει ότι κάποτε δεν ισχύει.
+    \item[11.2.] Το σύστημα στέλνει το "ποσό ασφαλείας" στον ιδιοκτήτη.
+    \item[11.3.] Το σύστημα αλλάζει τη κατάσταση της συναλλαγής σε ολοκληρωμένη.
 \end{enumerate}
 
 \subsection{Διαχείριση των βιβλίων που προσφέρει ο χρήστης προς ενοικίαση από άλλους}
